# test-and-diagnostic

./: CHANGELOG.md  ChangeLog  LICENSE  Makefile.am  NOTICE  README  configure.ac  output.XML  sample
.github/: CODEOWNERS
.github/agent-definition/: tad-agent.md
.github/knowledge-base/: tad-knowledge-base.md
.github/playbooks/: tad-playbooks.md
.github/prompts/: tad-agent-prompts.md
.github/workflows/: native-build.yml  tad-ai-workflows.md
config/: TestAndDiagnostic_arm.XML
cov_docker_script/: component_config.json  configure_options.conf
docs/: README.md  architecture-deep-dive.md  component-overview.md  developer-guide.md  external-dependencies.md  functional-workflows.md  high-level-design.md  low-level-design.md  troubleshooting-guide.md
scripts/: FileHandle_Monitor.sh  Zebra_conf_status.sh  arping_peer  boot_mode.sh  check_gw_health.sh  check_memory_health.sh  corrective_action.sh  dhcp_rouge_server_detection.sh  ethagent_associated_dev.sh  getSsidNames.sh  gui_session_expiry.sh  log_hourly.sh  log_mem_cpu_info.sh  log_sixhourly.sh  log_twice_day.sh  log_xmesh_diagnostics.sh  memswap_stats.sh  oemhooks.sh  ping_peer  remote_port_usage.sh  remove_max_cpu_usage_file.sh  resource_monitor.sh  resource_monitor_recover.sh  run_memory_compaction.sh  rxtx_cur.sh  rxtx_lan.sh  rxtx_res.sh  rxtx_sta.sh  schd_dhcp_server_detection_test.sh  self_heal_connectivity_test.sh  selfheal_aggressive.sh  selfheal_bootup.sh  selfheal_cosa_start_rem.sh  selfheal_reset_counts.sh  selfheal_rfc.sh  selfheal_rfc_sync.sh  speedtest.sh  speedtest_version.sh  start_gw_heath.sh  syscfg_cleanup.sh  (+5 more)
scripts/device/tccbr/: self_heal_connectivity_test.sh  selfheal_bootup.sh
source/: Makefile.am
source-arm/diagnostic/BbhmDiagIpPing/: Makefile.am  bbhm_diagip_operation_priv.c
source-arm/dmltad/: Makefile.am  cosa_diagnostic_apis_priv.c  plugin_main_priv.c
source/CpuMemFrag/: cpumemfrag_cron.sh  log_buddyinfo.sh
source/DevicePrioritization/TR-181/: Makefile.am  device_prio_apis.c  device_prio_apis.h  device_prio_dml.c  device_prio_dml.h  device_prio_rbus_handler_apis.c  device_prio_rbus_handler_apis.h  device_prio_scheduler_apis.c  device_prio_scheduler_apis.h  device_prio_util_apis.c  device_prio_util_apis.h  device_prio_webconfig_apis.c  device_prio_webconfig_apis.h  webconfig_helper_apis.c  webconfig_helper_apis.h  webconfig_scheduler_doc.c  webconfig_scheduler_doc.h
source/ImageHealthChecker/: IHC_Client.c  ImageHealthChecker  ImageHealthChecker_bus_connection.c  ImageHealthChecker_bus_connection.h  ImagehealthChecker.c  ImagehealthChecker.h  Makefile.am
source/LatencyMeasurement/: Makefile.am
source/LatencyMeasurement/ServiceMonitor/: Makefile.am  ServiceMonitor.c
source/LatencyMeasurement/ServiceMonitor/include/: ServiceMonitor.h
source/LatencyMeasurement/TR-181/: Makefile.am  lowlatency_apis.c  lowlatency_apis.h  lowlatency_dml.c  lowlatency_dml.h  lowlatency_rbus_handler_apis.c  lowlatency_rbus_handler_apis.h  lowlatency_util_apis.c  lowlatency_util_apis.h
source/LatencyMeasurement/xNetDP/: Makefile.am  xNetDP  xNetDP.c
source/LatencyMeasurement/xNetSniffer/: Makefile.am  xNetSniffer  xNetSniffer.c
source/LatencyMeasurement/xNetTest/: Makefile.am  xNetTest.c
source/StaticInfo/: log_staticIP_client_info.sh
source/TandDSsp/: CcspTandDSsp  Makefile.am  current_time.c  current_time.h  dm_pack_datamodel.c  ssp_action.c  ssp_action_priv.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  ssp_messagebus_interface_priv.c  tad_rbus_apis.c  tad_rbus_apis.h  webcfg_selfheal.c  webcfg_selfheal.h
source/ThermalCtrl/: check_fan.sh
source/diagnostic/: bbhm_diag_lib.c
source/diagnostic/BbhmDiagDownload/: bbhm_download_action.c  bbhm_download_base.c  bbhm_download_global.h  bbhm_download_interface.c  bbhm_download_internal_api.h  bbhm_download_operation.c
source/diagnostic/BbhmDiagExecutor/: bbhm_diageo_base.c  bbhm_diageo_global.h  bbhm_diageo_interface.c  bbhm_diageo_internal_api.h  bbhm_diageo_operation.c  bbhm_diageo_process.c  bbhm_diageo_states.c
source/diagnostic/BbhmDiagIpPing/: bbhm_diagip_base.c  bbhm_diagip_global.h  bbhm_diagip_interface.c  bbhm_diagip_internal_api.h  bbhm_diagip_operation.c  bbhm_diagip_operation_priv.c  bbhm_diagip_process.c  bbhm_diagip_sink_base.c  bbhm_diagip_sink_operation.c  bbhm_diagip_sink_states.c  bbhm_diagip_states.c  bbhm_diagip_tdo_base.c  bbhm_diagip_tdo_operation.c
source/diagnostic/BbhmDiagIpTraceroute/: bbhm_diagit_base.c  (+11 more)
source/dmltad/: Makefile.am  cosa_apis.h  cosa_apis_busutil.c  cosa_apis_busutil.h  cosa_apis_util.c  cosa_apis_util.h  cosa_apis_util_priv.c  cosa_apis_vendorlogfile.c  cosa_apis_vendorlogfile.h  cosa_deviceinfo_util_priv.c  cosa_diagnostic_apis.c  cosa_diagnostic_apis.h  cosa_diagnostic_apis_priv.c  cosa_dml_api_common.h  cosa_dns_dml.c  cosa_dns_dml.h  cosa_hwst_dml.c  cosa_hwst_dml.h  cosa_ip_dml.c  cosa_ip_dml.h  cosa_ip_dml_priv.c  cosa_logbackup_apis.c  cosa_logbackup_dml.c  cosa_logbackup_dml.h  cosa_powermgt_tcxb6_dml.c  cosa_powermgt_tcxb6_dml.h  cosa_rdktest_dml.c  cosa_rdktest_dml.h  cosa_selfheal_apis.c  cosa_selfheal_apis.h  cosa_selfheal_dml.c  cosa_selfheal_dml.h  cosa_thermal_dml.c  cosa_thermal_dml.h  cosa_wanconnectivity_apis.c  cosa_wanconnectivity_apis.h  cosa_wanconnectivity_operations.c  cosa_wanconnectivity_operations.h  cosa_wanconnectivity_rbus_apis.c  cosa_wanconnectivity_rbus_apis.h  (+21 more)
source/test/: Makefile.am  run_ut.sh
source/test/CcspTandD_Dml_Test/: CcspTandDSelfhealDmlTest.cpp  CcspTandD_DNS_DmlTest.cpp  CcspTandD_Dml_Mock.cpp  CcspTandD_Dml_Mock.h  CcspTandD_HWST_DmlTest.cpp  CcspTandD_IP_DmlTest.cpp  CcspTandD_PowerMGT_DmlTest.cpp  CcspTandD_Thermal_DmlTest.cpp  CcspTandD_XLE_SelfHeal.cpp  CosaTandD_Logbackup_DmlTest.cpp  Makefile.am  WanConnectivityCheckTest.cpp  gtest_main.cpp
source/util/: Makefile.am  RxTx100  Selfhealutil  Sub64  rxtx_100.c  selfheal_utility.c  sub64.c
source/xle_selfheal/: Makefile.am  xle_reliability_monitoring.c  xle_reliability_monitoring.h  xle_selfheal  xle_selfheal_util.c
(+48 files in other folders)
